--- a/1/homawork-09.27.2025.vcxproj
+++ b/1/homawork-09.27.2025.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{657ed005-846a-4b13-88d3-9f1dbd58b630}</ProjectGuid>
     <RootNamespace>homawork09272025</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>1</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
